# Prusa-Firmware-Buddy

./: .clang-format  .pre-commit-config.yaml  .symcheck.ps1  .symcheck_log.txt  .symfix.ps1  .symfix2.ps1  .symfix2_log.txt  .symfix_log.txt  CMakeLists.txt  CMakePresets.json  ProjectOptions.cmake  README.md  _cap_stdout.txt  _gen_stderr.txt  _stream_stderr.txt  _stream_stdout.txt  requirements.txt  resources-image.lfs  sanity_m115.stdout
src/common/feature/filament_sensor/: CMakeLists.txt  filament_sensor.cpp  filament_sensor.hpp  filament_sensor_adc.cpp  filament_sensor_adc.hpp  filament_sensor_adc_eval.cpp  filament_sensor_adc_eval.hpp  filament_sensor_id.hpp  filament_sensor_ix_side.hpp  filament_sensor_mmu.hpp  filament_sensor_photoelectric.hpp  filament_sensor_selftest_api.hpp  filament_sensor_states.hpp  filament_sensor_types.hpp  filament_sensor_xbuddy_extension.cpp  filament_sensor_xbuddy_extension.hpp  filament_sensors_handler.cpp  filament_sensors_handler.hpp  filament_sensors_handler_XL.cpp  filament_sensors_handler_XL_DEV_KIT.cpp  filament_sensors_handler_XL_remap.cpp  filament_sensors_handler_default.cpp
src/common/feature/filament_sensor/calibrator/: CMakeLists.txt  filament_sensor_calibrator.hpp  filament_sensor_calibrator_adc.cpp  filament_sensor_calibrator_adc.hpp  filament_sensor_calibrator_basic.cpp  filament_sensor_calibrator_basic.hpp
src/common/marlin_server_types/python_binding/: CMakeLists.txt  pyproject.toml
src/leds/: CMakeLists.txt  ac_controller_leds_handler.cpp  afs_design_strip_handler.cpp  led_manager.cpp  side_strip_handler.cpp  status_leds_handler.cpp
src/module/: CMakeLists.txt
src/module/ac_controller/: CMakeLists.txt  faults.cpp  modbus.cpp
src/module/ac_controller/include/ac_controller/: faults.hpp  modbus.hpp  types.hpp
src/module/leds/: CMakeLists.txt
src/module/leds/led_animation_controller/: CMakeLists.txt  simple_transition_controller.cpp
src/module/magic_optimizations/: CMakeLists.txt  magic_optimizations.cpp
src/module/raii/: CMakeLists.txt
src/module/raii/include/raii/: auto_restore.hpp  deleter.hpp
src/module/utils/: CMakeLists.txt
src/module/utils/bsod/: CMakeLists.txt
src/module/utils/bsod/bsod/: bsod.h
src/module/utils/buddy_utils/utils/: CMakeLists.txt  atomic_circular_queue.hpp  led_color.cpp  led_color.hpp  publisher.hpp  queued_publisher.hpp  stack_overflow_checker.hpp
src/module/xbuddy_extension/: CMakeLists.txt  mmu_bridge.cpp  modbus.cpp  shared_enums.cpp
src/module/xbuddy_extension/include/xbuddy_extension/: mmu_bridge.hpp  modbus.hpp  shared_enums.hpp
src/puppy/xbuddy_extension/: CMakeLists.txt  app.cpp  cyphal_application.cpp  cyphal_application.hpp  cyphal_application_impl.hpp  cyphal_presentation.cpp  cyphal_presentation.hpp  cyphal_transport.cpp  cyphal_transport.hpp  cyphal_types.hpp  hal.cpp  hal.hpp  hal_pub.cpp  hal_pub.hpp  lock_guard.hpp  main.cpp  master_activity.cpp  master_activity.hpp  mmu.cpp  mmu.hpp  modbus.cpp  modbus.hpp  stm32h503.ld  yet_another_circular_buffer.hpp
tests/unit/: CMakeLists.txt  README.md
tests/unit/common/: CMakeLists.txt
tests/unit/common/Leds/: color_matcher.hpp  leds_dummy.hpp
tests/unit/common/e2ee/: 20_bytes_encrypted_text  CMakeLists.txt  decryptor.cpp  encrypted_text  missing_functions.c
tests/unit/common/feature/cork/: CMakeLists.txt
tests/unit/common/feature/xbuddy_extension/: CMakeLists.txt  chamber_filtration_stub.cpp  cooling_tests.cpp  option_override.hpp
tests/unit/common/filament_sensor/: CMakeLists.txt  filament_sensor_adc_tests.cpp
tests/unit/common/gcode/reader/: CMakeLists.txt  box_new.bgcode  box_new.gcode  box_new_enc.bgcode  box_new_enc_fully.bgcode  box_new_enc_multiple.bgcode  box_new_enc_poly.bgcode  box_new_meta_after.bgcode  box_new_meta_before.bgcode  box_new_signed.bgcode  gcode_info.cpp  gcode_reader.cpp  printer_private_key.der  test_encrypted_gcode_bad_identity_block_signature.bgcode  test_encrypted_gcode_bad_key_hash.bgcode  test_encrypted_gcode_correct.bgcode  test_encrypted_gcode_corrupted_metadata.bgcode  test_encrypted_gcode_diff_printer.bgcode  test_encrypted_gcode_early_last_block.bgcode  test_encrypted_gcode_encrypted_before_identity.bgcode  test_encrypted_gcode_encrypted_before_key.bgcode  test_encrypted_gcode_invalid_identity_key.bgcode  test_encrypted_gcode_key_before_identity.bgcode  test_encrypted_gcode_metadata_not_beggining.bgcode  test_encrypted_gcode_no_last_block.bgcode  test_encrypted_gcode_plain_gcode_inside_encrypted.bgcode  test_files.hpp
tests/unit/common/probe_analysis/: CMakeLists.txt  probe_position_lookback_test.cpp  tests.cpp
tests/unit/common/ring_allocator/: CMakeLists.txt
tests/unit/common/utils/: CMakeLists.txt  printer_model_tests.cpp  progress_mapper_tests.cpp
tests/unit/common/utils/signature_oak/: CMakeLists.txt  (+1 more)
tests/unit/connect/: CMakeLists.txt  missing_functions.cpp  printer_type_override.hpp  render.cpp
tests/unit/gui/: CMakeLists.txt  gui_time_tests.cpp
tests/unit/gui/lazyfilelist/: CMakeLists.txt  ourPosix.hpp
tests/unit/gui/window/: CMakeLists.txt
tests/unit/include/generators/: random_bytes.hpp
tests/unit/lang/eeprom/: CMakeLists.txt
tests/unit/lang/text_fit/: CMakeLists.txt
tests/unit/lang/translator/: CMakeLists.txt  provider.cpp  provider.h  providerCPUFLASH.cpp  providerFILE.cpp
tests/unit/media_prefetch/: CMakeLists.txt  media_prefetch_tests.cpp
tests/unit/mmu2-modbus/: CMakeLists.txt  test_mmu-codec.cpp
tests/unit/mock/: CMakeLists.txt
tests/unit/mock/freertos/: CMakeLists.txt  mutex.cpp
tests/unit/mock/logging/: CMakeLists.txt  log.cpp
tests/unit/module/utils/: CMakeLists.txt  atomic_circular_queue_test.cpp  rate_limiter_tests.cpp
tests/unit/persistent_stores/: CMakeLists.txt  EEPROM_journal_test.cpp
tests/unit/puppies/: CMakeLists.txt
tests/unit/puppy/xbuddy_extension/: CMakeLists.txt  cyphal_application_tests.cpp  modbus_tests.cpp  yet_another_circular_buffer_tests.cpp
tests/unit/tests_include/: bsod.cpp
tests/unit/tests_include/test_utils/: formatters.hpp
tests/unit/transfers/: CMakeLists.txt
(+860 files in other folders)
